# mycode_store

./: README.md
51_car/: 51_proctrl.cpp  51_proctrl.cpp~  51_proctrl.h  51_proctrl.h~  Makefile  Makefile~  camera.cpp  camera.cpp~  camera.h  camera.h~  findcolor.cpp  findcolor.cpp~  findcolor.h  findcolor.h~  imgpro.cpp  imgpro.cpp~  imgpro.h  imgpro.h~  main.cpp  main.cpp~  sport.cpp  sport.cpp~  sport.h  sport.h~
AI/anneal/include/: anneal.h  anneal.h~  gene_base.h~  population.h~
AI/anneal/src/: anneal.cpp  anneal.cpp~  population.cpp~
AI/gene/: gene.cpp~  gene.h~  gene_base.h~  population.cpp~  population.h~  readme.txt
AI/gene/include/: gene_base.h~  gene_bit.h  gene_bit.h~  population.h  population.h~
AI/gene/src/: gene_bit.cpp  gene_bit.cpp~  main.cpp  main.cpp~  population.cpp  population.cpp~
AI/neural_net_nerve/: nerve_base.cpp  nerve_base.cpp~  nerve_base.h  nerve_base.h~  nerve_sec.cpp  nerve_sec.h  nerve_sig.cpp  nerve_sig.h  nerve_sig.h~  nerve_step.cpp  nerve_step.h  neural_layer.cpp  neural_layer.h  neural_layer.h~
bit_change/: main.cpp  main.cpp~
camera/: main.cpp  main.cpp~  opencv's  install inubuntu.txt  opencv_g++  无标题文档
ceshi/: ip.cpp  main.cpp
ceshi_cvresize/: Makefile  main.cpp
exs/: Makefile  exs.cpp  exs.h  main.cpp
fork/: main.cpp
huanjing/: main.cpp
imgpro/image_processing/未命名/: img_pro.cpp  img_pro.h  img_show.cpp  img_show.h  img_show.h.autosave  main.cpp  未命名.pro
imgpro/image_processing/未命名-build-desktop-Qt_4_8_1___PATH________/: Makefile
imgpro/img_pro_cmake/: CMakeLists.txt  configure.sh  configure_lib.sh
imgpro/img_pro_cmake/include/: imgpro.h
imgpro/img_pro_cmake/src/: imgpro.cpp  main.cpp
imgpro/img_pro_lubiao/: cmake.shell  make.shell
imgpro/img_pro_lubiao/blob/: CMakeLists.txt
imgpro/img_pro_lubiao/blob/.svn/: entries
imgpro/img_pro_lubiao/imgpro/: findcolor.cpp  findcolor.h  imgpro.cpp  imgpro.h
imgpro/img_pro_lubiao/test/: CMakeLists.txt  main.cpp
imgpro/img_pro_simple/: main.cpp  main.cpp~
imgpro/img_pro_thresh/: 备注
imgpro/img_pro_thresh/imgpro/: CMakeLists.txt
imgpro/img_pro_thresh/test/: main.cpp
jsjtxxsy/新建文件夹/: ~$实验报告一.doc  实验报告一.doc  实验报告三.doc  实验报告二.doc
kazhenceshi/cam/: CMakeLists.txt  main.cpp  wit_camera.cpp  wit_camera.h
kazhenceshi/cam/.svn/: entries
lddll/: main.cpp  test.cpp  test.h  test2.cpp  test2.h
math/: main.cpp  main.cpp~
matrix/: hc_matrix.h
matrix/1/: hc_matrix.cpp  hc_matrix.cpp~  hc_matrix.h  hc_matrix.h~
module/: Makefile  hello.cpp
my_darwin/demo/: Makefile  main.cpp
my_darwin/framework/: Makefile2
my_darwin/framework/include/: CM730.h  FSR.h  LinuxCM730.h  MX28.h  WitEngine.h  WitManager.h  WitModule.h
my_darwin/framework/src/: CM730.cpp  LinuxCM730.cpp  (+4 more)
p_thread_ceshi/: main.cpp
qt_data/firstqt/: .main.h.swp  firstqt.pro  main.cpp  main.h
qt_data/firstqt-build-desktop-Qt_4_8_1___PATH________/: Makefile  moc_main.cpp
robotic_arm/src/: hc_arm.h  hc_arm.h~  hc_joint.cpp  hc_joint.h  hc_joint.h~
socket/client/: client.cpp~
socket/qq_robot/: web_qq_firefox  web_qq_firefox2
socket/server/: server.cpp
socket/socket_mac/: main.cpp
stack/: myStack.h
toLWT/: findcolor.cpp  findcolor.h  toLWT.cpp  toLWT.h
tty/: main.cpp
unix_code/fd_code/: main.cpp
unix_code/link_code/: main.cpp
unix_code/s_port/: main.cpp  main.cpp~
unix_code/signal_code/: main.cpp  说明  说明~
wuziqi/: client_main.cpp  wuziqi.h  wuziqi.pro
wuziqi/server/: CMakeList.txt
zhijiao_xiangying/: zhijiao.h
zmq_cmake/: CMakeLists.txt
zmq_cmake/src/: main.cpp
(+35 files in other folders)
